form aceitando dado

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.1",
+    "validator": "^13.7.0",
+    "validator-js": "^0.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
