--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
+    "react-table": "^7.8.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "validator": "^13.7.0",
     "validator-js": "^0.2.1",
     "web-vitals": "^2.1.4",
