--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "date-fns": "^2.0.0-beta.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-datepicker": "^4.8.0",
