--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "date-fns": "^2.0.0-beta.5",
+    "little-state-machine": "^4.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-datepicker": "^4.8.0",
